--- a/samplecode/values.yaml
+++ b/samplecode/values.yaml
@@ -13,12 +13,12 @@ imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
-serviceAccount:
+#serviceAccount:
   # Specifies whether a service account should be created
   create: true
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
-  name: kube-system
+  #name: kube-system
 
 podSecurityContext: {}
   # fsGroup: 2000
@@ -41,7 +41,8 @@ ingress:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: k8s-dns-bb0f7fea.hcp.eastus.azmk8s.io
+    - host: 
+        - k8s
       paths: []
 
   tls: []
